// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convert-esmodule can convert class default exports 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
class A {}
exports.default = A;
"
`;

exports[`convert-esmodule can convert default exports 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
function test() {}
exports.default = test;
"
`;

exports[`convert-esmodule can convert default imports 1`] = `
"\\"use strict\\";
var $csb__b = require(\\"./b\\");
var a = $_csb__interopRequireDefault($csb__b);
(0, a.default)();
function $_csb__interopRequireDefault(obj) {
  return obj && obj.__esModule ? obj : {
    default: obj
  };
}
"
`;

exports[`convert-esmodule can convert exports containing overlapping exports 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
var $csb__some = require(\\"./some.js\\");
Object.defineProperty(exports, \\"some\\", {
  enumerable: true,
  configurable: true,
  get: function $csbGet() {
    return $csb__some_.default;
  }
});
var $csb__some_ = $_csb__interopRequireDefault(require(\\"./some.js\\"));
Object.keys($csb__some).forEach(function (key) {
  if (key === \\"default\\" || key === \\"__esModule\\") return;
  if (Object.prototype.hasOwnProperty.call(exports, key)) return;
  Object.defineProperty(exports, key, {
    enumerable: true,
    configurable: true,
    get: function $csbGet() {
      return $csb__some[key];
    }
  });
});
function $_csb__interopRequireDefault(obj) {
  return obj && obj.__esModule ? obj : {
    default: obj
  };
}
"
`;

exports[`convert-esmodule can convert function exports 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.test = test;
function test() {}
const test2 = () => {};
exports.test2 = test2;
class Test {}
exports.Test = Test;
"
`;

exports[`convert-esmodule can convert import expressions 1`] = `
"\\"use strict\\";
$csbImport('test');
"
`;

exports[`convert-esmodule can convert named imports 1`] = `
"\\"use strict\\";
var $csb__b = require(\\"./b\\");
(0, $csb__b.a)();
(0, $csb__b.b)();
(0, $csb__b.c)();
"
`;

exports[`convert-esmodule can convert named imports with different scopes 1`] = `
"\\"use strict\\";
var $csb__b = require(\\"./b\\");
(0, $csb__b.a)();
function test1() {
  (0, $csb__b.a)();
}
function test2(a) {
  a();
  function test3() {
    a();
  }
}
"
`;

exports[`convert-esmodule can convert normal exports 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
var $csb__store = require(\\"./test/store.js\\");
Object.defineProperty(exports, \\"test\\", {
  enumerable: true,
  configurable: true,
  get: function $csbGet() {
    return $csb__store.test;
  }
});
Object.defineProperty(exports, \\"test2\\", {
  enumerable: true,
  configurable: true,
  get: function $csbGet() {
    return $csb__store.test2;
  }
});
"
`;

exports[`convert-esmodule can convert reexports 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
var $csb__store = require(\\"./test/store.js\\");
Object.keys($csb__store).forEach(function (key) {
  if (key === \\"default\\" || key === \\"__esModule\\") return;
  if (Object.prototype.hasOwnProperty.call(exports, key)) return;
  Object.defineProperty(exports, key, {
    enumerable: true,
    configurable: true,
    get: function $csbGet() {
      return $csb__store[key];
    }
  });
});
"
`;

exports[`convert-esmodule can convert weird default exports 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
var $csb__default = a = 'b';
exports.default = $csb__default;
"
`;

exports[`convert-esmodule can handle as imports 1`] = `
"\\"use strict\\";
var $csb__b = require(\\"./b\\");
const func = (0, $csb__b.a)();
"
`;

exports[`convert-esmodule can handle async code 1`] = `
"\\"use strict\\";
var $csb__test = require(\\"./test\\");
var T = $_csb__interopRequireDefault($csb__test);
(async () => {
  const test = await test2();
});
function $_csb__interopRequireDefault(obj) {
  return obj && obj.__esModule ? obj : {
    default: obj
  };
}
"
`;

exports[`convert-esmodule can handle class properties 1`] = `
"\\"use strict\\";
var $csb__test = require(\\"./test\\");
var T = $_csb__interopRequireDefault($csb__test);
class T2 {
  a = () => {
    return 'test';
  }
  b = ''
  c = {}
  static d = ''
}
function $_csb__interopRequireDefault(obj) {
  return obj && obj.__esModule ? obj : {
    default: obj
  };
}
"
`;

exports[`convert-esmodule can handle inline comments 1`] = `
"\\"use strict\\";
var $csb__b = require(\\"./b\\");
(0, $csb__b.a)();
(0, $csb__b.c)();
"
`;

exports[`convert-esmodule changes default imports inline 1`] = `
"\\"use strict\\";
var $csb__rgb = require(\\"./rgb\\");
var rgb = $_csb__interopRequireDefault($csb__rgb);
(0, rgb.default).a;
function $_csb__interopRequireDefault(obj) {
  return obj && obj.__esModule ? obj : {
    default: obj
  };
}
"
`;

exports[`convert-esmodule converts object shorthands 1`] = `
"\\"use strict\\";
var $csb__templatefactory = require(\\"./template-factory.js\\");
const short = {
  templateFactory: (0, $csb__templatefactory.templateFactory)
};
"
`;

exports[`convert-esmodule defines its exports before requires 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.get = get;
var $csb__colorsvalues = require(\\"./colors-values\\");
function get() {
  return 5;
}
"
`;

exports[`convert-esmodule does empty exports 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
var $csb__column_sorting_draggable = require(\\"./column_sorting_draggable\\");
var $csb__data_grid = require(\\"./data_grid\\");
Object.defineProperty(exports, \\"EuiDataGrid\\", {
  enumerable: true,
  configurable: true,
  get: function $csbGet() {
    return $csb__data_grid.EuiDataGrid;
  }
});
var $csb__data_grid_types = require(\\"./data_grid_types\\");
Object.keys($csb__data_grid_types).forEach(function (key) {
  if (key === \\"default\\" || key === \\"__esModule\\") return;
  if (Object.prototype.hasOwnProperty.call(exports, key)) return;
  Object.defineProperty(exports, key, {
    enumerable: true,
    configurable: true,
    get: function $csbGet() {
      return $csb__data_grid_types[key];
    }
  });
});
"
`;

exports[`convert-esmodule doesn't hoist single import above export 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
var $csb__tfjscore = require(\\"@tensorflow/tfjs-core\\");
var $csb__tfjsdata = require(\\"@tensorflow/tfjs-data\\");
var data = $csb__tfjsdata;
Object.keys($csb__tfjscore).forEach(function (key) {
  if (key === \\"default\\" || key === \\"__esModule\\") return;
  if (Object.prototype.hasOwnProperty.call(exports, key)) return;
  Object.defineProperty(exports, key, {
    enumerable: true,
    configurable: true,
    get: function $csbGet() {
      return $csb__tfjscore[key];
    }
  });
});
"
`;

exports[`convert-esmodule doesn't remove object initializers 1`] = `
"\\"use strict\\";
var $csb__shared = require(\\"@react-spring/shared\\");
const createHost = (components, {a = () => {}} = {}) => {
  (0, $csb__shared.is)();
};
"
`;

exports[`convert-esmodule doesn't set var definitions 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
var global = typeof  window !== 'undefined' ? window : {};
exports.global = global;
"
`;

exports[`convert-esmodule exports that are not on the root scope are not renamed 1`] = `
"\\"use strict\\";
function a() {
  var exports = 'blaat';
}
"
`;

exports[`convert-esmodule generates parseable var name with @ 1`] = `
"\\"use strict\\";
var $csb__akjaw = require(\\"./a-@kjaw\\");
"
`;

exports[`convert-esmodule handles assignments and exports at the same time 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
const {Ease: C, Linear: Linear, Power0: Power0, Power1: Power1, Power2: Power2, Power3: Power3, Power4: Power4, TweenPlugin: TweenPlugin} = _gsScope;
exports.C = C;
exports.Linear = Linear;
exports.Power0 = Power0;
exports.Power1 = Power1;
exports.Power2 = Power2;
exports.Power3 = Power3;
exports.Power4 = Power4;
exports.TweenPlugin = TweenPlugin;
"
`;

exports[`convert-esmodule handles concurrent import and exports 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"a\\", {
  enumerable: true,
  configurable: true,
  get: function $csbGet() {
    return a;
  }
});
Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
var $csb__testlibdom = require(\\"test-lib-dom\\");
var $csb__testlibdom_ = require(\\"test-lib-dom\\");
var a = () => (0, $csb__testlibdom.a);
Object.keys($csb__testlibdom_).forEach(function (key) {
  if (key === \\"default\\" || key === \\"__esModule\\") return;
  if (Object.prototype.hasOwnProperty.call(exports, key)) return;
  Object.defineProperty(exports, key, {
    enumerable: true,
    configurable: true,
    get: function $csbGet() {
      return $csb__testlibdom_[key];
    }
  });
});
"
`;

exports[`convert-esmodule handles default as exports 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
Object.defineProperty(exports, \\"Field\\", {
  enumerable: true,
  configurable: true,
  get: function $csbGet() {
    return $csb__Field.default;
  }
});
var $csb__Field = $_csb__interopRequireDefault(require(\\"./Field\\"));
function $_csb__interopRequireDefault(obj) {
  return obj && obj.__esModule ? obj : {
    default: obj
  };
}
"
`;

exports[`convert-esmodule handles default imports 1`] = `
"\\"use strict\\";
var $csb__react = require(\\"react\\");
var React = $csb__react;
console.log(React.Component);
"
`;

exports[`convert-esmodule handles export alias 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"default\\", {
  enumerable: true,
  configurable: true,
  get: function $csbGet() {
    return Subscription;
  }
});
Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
"
`;

exports[`convert-esmodule handles export mutations 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
function test() {}
exports.default = test;
exports.default = test = 5;
"
`;

exports[`convert-esmodule handles export mutations with no named function 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
function $csb__default() {}
exports.default = $csb__default;
"
`;

exports[`convert-esmodule handles export mutations with variables 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
var to;
exports.to = to;
function assign() {
  exports.to = to = \\"test\\";
}
function assign2(to) {
  to = \\"test\\";
}
"
`;

exports[`convert-esmodule handles export object 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"c\\", {
  enumerable: true,
  configurable: true,
  get: function $csbGet() {
    return c;
  }
});
Object.defineProperty(exports, \\"b\\", {
  enumerable: true,
  configurable: true,
  get: function $csbGet() {
    return b;
  }
});
Object.defineProperty(exports, \\"a\\", {
  enumerable: true,
  configurable: true,
  get: function $csbGet() {
    return a;
  }
});
Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
"
`;

exports[`convert-esmodule handles import statement after default export 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
var $csb__types = require(\\"./types\\");
function defaultOverscanIndicesGetter(_ref) {}
exports.default = defaultOverscanIndicesGetter;
"
`;

exports[`convert-esmodule handles multiple aliased exports 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"f\\", {
  enumerable: true,
  configurable: true,
  get: function $csbGet() {
    return e;
  }
});
Object.defineProperty(exports, \\"getSetObserver\\", {
  enumerable: true,
  configurable: true,
  get: function $csbGet() {
    return _getSetObserver;
  }
});
Object.defineProperty(exports, \\"d\\", {
  enumerable: true,
  configurable: true,
  get: function $csbGet() {
    return c;
  }
});
Object.defineProperty(exports, \\"getMapObserver\\", {
  enumerable: true,
  configurable: true,
  get: function $csbGet() {
    return _getMapObserver;
  }
});
Object.defineProperty(exports, \\"b\\", {
  enumerable: true,
  configurable: true,
  get: function $csbGet() {
    return a;
  }
});
Object.defineProperty(exports, \\"getArrayObserver\\", {
  enumerable: true,
  configurable: true,
  get: function $csbGet() {
    return _getArrayObserver;
  }
});
Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
f.test();
d.test();
b.test();
"
`;

exports[`convert-esmodule handles multiple var exports 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
const a = 5, b = 6;
exports.a = a;
exports.b = b;
"
`;

exports[`convert-esmodule handles named exports 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"a\\", {
  enumerable: true,
  configurable: true,
  get: function $csbGet() {
    return a;
  }
});
Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
const a = 'c';
"
`;

exports[`convert-esmodule handles re-exports in named exports 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"a\\", {
  enumerable: true,
  configurable: true,
  get: function $csbGet() {
    return (0, $csb__b.a);
  }
});
Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
var $csb__b = require(\\"./b\\");
"
`;

exports[`convert-esmodule handles re-exports in named exports with a alias 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"c\\", {
  enumerable: true,
  configurable: true,
  get: function $csbGet() {
    return c;
  }
});
Object.defineProperty(exports, \\"b\\", {
  enumerable: true,
  configurable: true,
  get: function $csbGet() {
    return (0, $csb__b.a);
  }
});
Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
var $csb__b = require(\\"./b\\");
const c = 'test';
"
`;

exports[`convert-esmodule hoists exports as well 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
var $csb__a = require(\\"./a\\");
Object.defineProperty(exports, \\"c\\", {
  enumerable: true,
  configurable: true,
  get: function $csbGet() {
    return $csb__a.c;
  }
});
var $csb__b = require(\\"./b\\");
Object.defineProperty(exports, \\"data\\", {
  enumerable: true,
  configurable: true,
  get: function $csbGet() {
    return $csb__b;
  }
});
function a() {
  return 5;
}
"
`;

exports[`convert-esmodule hoists function exports 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.test3 = test3;
var $csb__store = require(\\"./test/store.js\\");
Object.defineProperty(exports, \\"test\\", {
  enumerable: true,
  configurable: true,
  get: function $csbGet() {
    return $csb__store.test;
  }
});
Object.defineProperty(exports, \\"test2\\", {
  enumerable: true,
  configurable: true,
  get: function $csbGet() {
    return $csb__store.test2;
  }
});
function test3() {}
"
`;

exports[`convert-esmodule hoists imports at bottom 1`] = `
"\\"use strict\\";
var $csb__proptypes = require(\\"prop-types\\");
var PropTypes = $_csb__interopRequireDefault($csb__proptypes);
const a = (0, PropTypes.default).a;
function $_csb__interopRequireDefault(obj) {
  return obj && obj.__esModule ? obj : {
    default: obj
  };
}
"
`;

exports[`convert-esmodule ignores comments 1`] = `
"\\"use strict\\";
"
`;

exports[`convert-esmodule keeps import order 1`] = `
"\\"use strict\\";
var $csb__1 = require(\\"1\\");
var $csb__2 = require(\\"2\\");
"
`;

exports[`convert-esmodule parses and writes chars with linebreaks 1`] = `
"\\"use strict\\";
var WS_CHARS = 'u2000-\\\\u200a\\\\u2028\\\\u2029\\\\u202f\\\\u205f\\\\u3000\\\\ufeff';
"
`;

exports[`convert-esmodule printer issues can convert + + 1`] = `
"\\"use strict\\";
c = (10.0, + + 15);
"
`;

exports[`convert-esmodule renames exports that are already defined, even in block scope 1`] = `
"\\"use strict\\";
var __$csb_exports = 'testtest';
function a() {
  __$csb_exports = 'blaat';
}
"
`;

exports[`convert-esmodule retains the order of re-exports 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"data\\", {
  enumerable: true,
  configurable: true,
  get: function $csbGet() {
    return data;
  }
});
Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
var $csb__tfjscore = require(\\"@tensorflow/tfjs-core\\");
var $csb__tfjstest = require(\\"@tensorflow/tfjs-test\\");
var data2 = $csb__tfjstest;
var $csb__tfjslayers = require(\\"@tensorflow/tfjs-layers\\");
var $csb__tfjsconverter = require(\\"@tensorflow/tfjs-converter\\");
var $csb__tfjsdata = require(\\"@tensorflow/tfjs-data\\");
var data = $csb__tfjsdata;
Object.keys($csb__tfjscore).forEach(function (key) {
  if (key === \\"default\\" || key === \\"__esModule\\") return;
  if (Object.prototype.hasOwnProperty.call(exports, key)) return;
  Object.defineProperty(exports, key, {
    enumerable: true,
    configurable: true,
    get: function $csbGet() {
      return $csb__tfjscore[key];
    }
  });
});
Object.keys($csb__tfjslayers).forEach(function (key) {
  if (key === \\"default\\" || key === \\"__esModule\\") return;
  if (Object.prototype.hasOwnProperty.call(exports, key)) return;
  Object.defineProperty(exports, key, {
    enumerable: true,
    configurable: true,
    get: function $csbGet() {
      return $csb__tfjslayers[key];
    }
  });
});
Object.keys($csb__tfjsconverter).forEach(function (key) {
  if (key === \\"default\\" || key === \\"__esModule\\") return;
  if (Object.prototype.hasOwnProperty.call(exports, key)) return;
  Object.defineProperty(exports, key, {
    enumerable: true,
    configurable: true,
    get: function $csbGet() {
      return $csb__tfjsconverter[key];
    }
  });
});
"
`;

exports[`convert-esmodule works with variables that are named exports 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
var __$csb_exports = [eventedState, eventedShowHideState];
__$csb_exports.push('test');
var $csb__default = __$csb_exports;
exports.default = $csb__default;
"
`;
